fix: fix todoBody container jump when checking off subtask

--- a/src/components/todoBody/TodoBody.scss
+++ b/src/components/todoBody/TodoBody.scss
@@ -23,6 +23,7 @@
     overflow: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    position: relative;
 
     &::-webkit-scrollbar {
       display: none;
